fix: adjust colors due to contrast issues

--- a/packages/components/src/components/bal-card/bal-card.sass
+++ b/packages/components/src/components/bal-card/bal-card.sass
@@ -41,11 +41,11 @@
   +modifier(is-info)
     background: var(--bal-color-primary)
   +modifier(is-success)
-    background: var(--bal-color-success)
+    background: var(--bal-color-success-2)
   +modifier(is-warning)
-    background: var(--bal-color-warning)
+    background: var(--bal-color-warning-2)
   +modifier(is-danger)
-    background: var(--bal-color-danger)
+    background: var(--bal-color-danger-2)
   +modifier(is-grey)
     background: var(--bal-color-grey)
   +modifier(is-red)
